# os_labs

./: .clang-format  CMakeLists.txt  README.md  run_lab.sh
lab10/: CMakeLists.txt  README.md  killer.c  reader.c
lab11/: README.md
lab12/: .execme  CMakeLists.txt  README.md
lab13/: Makefile  README.md  queue.c  queue_cond.c  queue_mutex.c  testing.ic
lab2/: CMakeLists.txt  README.md  task1.c  task2.c  task3.c  task4.c  task7.c  task8.c
lab3/: .execme  CMakeLists.txt  README.md  memory-user.c
lab4/: CMakeLists.txt  README.md  aspace.c  null.c  task2.c  task6.c  task7.c  task8.c
lab5/: .execme  CMakeLists.txt  README.md  myls.c  mystat.c  mytail.c  task1.c  task2.c  task6.c
lab6/: .execme  CMakeLists.txt  README.md  check-crc.c  check-csum.c  check-fletcher.c  check-xor.c  crc8.h  create-csum.c
lab7/: .execme  CMakeLists.txt  README.md  switch_case.c
lab8/: CMakeLists.txt  README.md  client.c  config.h  server.c
lab9/: CMakeLists.txt  README.md  main-deadlock-global.c  main-deadlock.c  main-race.c  main-signal-cv.c  main-signal.c  mythread.h
scripts/: run_all.sh
